<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/enroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/enroll_no_text"
        android:inputType="number"
        android:minHeight="48dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enroll"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/name_text"
        android:inputType="text"
        android:minHeight="48dp"
        android:autofillHints="name" />

    <EditText
        android:id="@+id/program"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:ems="10"
        android:hint="@string/program_text"
        android:inputType="textCapCharacters"
        android:minHeight="48dp"
        android:enabled="false"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/sem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/program"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/sem_text"
        android:inputType="number"
        android:minHeight="48dp"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/div"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sem"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/div_text"
        android:inputType="textCapCharacters"
        android:minHeight="48dp"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/div"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/email_id_text"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:autofillHints="emailAddress" />

    <EditText
        android:id="@+id/contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/contact_text"
        android:inputType="number"
        android:minHeight="48dp"
        android:autofillHints="phone" />

    <EditText
        android:id="@+id/complain_box"
        android:layout_below="@id/contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="5"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:hint="@string/complain_hint_text"
        android:enabled="false"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/submit"
        android:layout_below="@id/complain_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/button_text"
        android:clickable="false"
        />

    <RelativeLayout

        android:id="@+id/pass_lyt"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:background="?android:attr/windowBackground">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:hint="@string/username"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColorHint="#546E7A"
            android:autofillHints="" />

        <EditText
            android:id="@+id/pass_word"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/username"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="50dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="#546E7A"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/pass_word"
            android:layout_centerHorizontal="true"
            android:text="@string/login"
            />

    </RelativeLayout>

</RelativeLayout>
